Review comments incorporated